--- a/src/components/stateless/ConfirmBuyModal/ConfirmBuyModal.scss
+++ b/src/components/stateless/ConfirmBuyModal/ConfirmBuyModal.scss
@@ -2,4 +2,21 @@
 
 :local(.modal) {
   @include font();
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0,0,0,0.4)
+}
+
+:local(.inner) {
+  transform: translateX(-50%) translateY(-50%);
+  background-color: #ffffff;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  width: 350px;
+  height: 580px;
 }
