--- a/src/components/stateless/NavigationBar/NavigationBar.scss
+++ b/src/components/stateless/NavigationBar/NavigationBar.scss
@@ -1,4 +1,4 @@
-@import '../Button/Button.scss';
+@import '../generic/Button/Button.scss';
 
 $create-offer-button-background-color: #002C87;
 $create-offer-button-border-color: #002C87;
