--- a/src/components/stateless/generic/SearchField/SearchField.scss
+++ b/src/components/stateless/generic/SearchField/SearchField.scss
@@ -1,4 +1,4 @@
-@import '../../stateless/shared.scss';
+@import '../../shared';
 
 $underline-color: rgba(0,44,135,0.15);
 $placeholder-color: rgba(32,171,250,0.42);
