--- a/src/components/stateless/specific/BalanceTooLowModal/BalanceTooLowModal.scss
+++ b/src/components/stateless/specific/BalanceTooLowModal/BalanceTooLowModal.scss
@@ -8,7 +8,11 @@
   top: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0,0,0,0.4)
+  background-color: rgba(0, 0, 0, 0.4)
+}
+
+:local(.icon) {
+  margin: 20px;
 }
 
 :local(.link) {
@@ -22,49 +26,8 @@
   margin-bottom: 20px;
 }
 
-:local(.table) {
-  margin: 0 auto;
-  text-align: left;
-}
-
-:local(.description) {
-  margin-bottom: 20px;
-  font-size: 16px;
-}
-
-:local(.upper) {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  padding: 43px 20px 20px 20px;
-}
-
-:local(.buttons) {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 100%;
-  padding: 20px;
-}
-
-:local(.confirm) {
-  width: 200px;
-}
-
-:local(.cancel) {
-  width: 200px;
-}
-
-:local(.lower) {
-  box-sizing: border-box;
-  background-color: white;
-  text-align: center;
-  width: 580px;
-  padding-top: 35px;
-}
-
 :local(.inner) {
+  text-align: center;
   box-sizing: border-box;
   display: flex;
   background-color: #F1FAFF;
@@ -76,4 +39,18 @@
   left: 50%;
   top: 50%;
   width: 580px;
+  padding: 20px;
+}
+
+:local(.description) {
+  font-size: 16px;
+}
+
+:local(.buttons) {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+  padding: 20px;
 }
