--- a/src/components/stateless/specific/BalanceTooLowModal/BalanceTooLowModal.scss
+++ b/src/components/stateless/specific/BalanceTooLowModal/BalanceTooLowModal.scss
@@ -43,14 +43,6 @@
 }
 
 :local(.description) {
+  @include font();
   font-size: 16px;
-}
-
-:local(.buttons) {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 100%;
-  padding: 20px;
 }
