--- a/src/components/stateless/specific/TransactionProgressModal/TransactionProgressModal.scss
+++ b/src/components/stateless/specific/TransactionProgressModal/TransactionProgressModal.scss
@@ -8,7 +8,7 @@
   top: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0,0,0,0.4)
+  background-color: rgba(0, 0, 0, 0.4)
 }
 
 :local(.link) {
@@ -19,7 +19,6 @@
   @include font();
   font-weight: 100;
   font-size: 28px;
-  margin-bottom: 20px;
 }
 
 :local(.table) {
@@ -36,7 +35,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 43px 20px 20px 20px;
+  padding: 65px;
 }
 
 :local(.buttons) {
@@ -62,6 +61,11 @@
   text-align: center;
   width: 580px;
   padding-top: 35px;
+}
+
+:local(.spinner) {
+  display: block;
+  margin: 30px auto;
 }
 
 :local(.inner) {
