--- a/src/components/stateless/specific/pages/ProductPage/ProductPage.scss
+++ b/src/components/stateless/specific/pages/ProductPage/ProductPage.scss
@@ -1,3 +1,4 @@
+@import '../../../shared';
 @import '../../../generic/Button/Button';
 
 @mixin column {
@@ -25,6 +26,19 @@
   border: 0;
   background-color: rgba(32,171,250,0.2);
   height: 100vh;
+}
+
+:local(.title) {
+  @include font();
+  text-transform: capitalize;
+  font-size: 28px;
+  font-weight: 100;
+  padding-bottom: 12px;
+  border-bottom: 1px solid rgba(0,44,135,0.2);
+}
+
+:local(.info) {
+  margin: 20px 0;
 }
 
 :local(.subtitle) {
