--- a/src/components/stateless/specific/pages/ProductPage/SummaryProduct/SummaryProduct.scss
+++ b/src/components/stateless/specific/pages/ProductPage/SummaryProduct/SummaryProduct.scss
@@ -5,11 +5,12 @@
 }
 
 :local(.title) {
+  @include font();
   font-weight: 100;
-  font-size: 28px;
-  border-bottom: 1px solid rgba(0,0,0,0.2);
-  padding-bottom: 20px;
-  margin-bottom: 20px;
+  font-size: 22px;
+  border-bottom: 1px solid rgba(0,44,135,0.2);
+  padding-bottom: 21px;
+  margin-bottom: 12px;
 }
 
 :local(.reimburse) {
@@ -20,5 +21,6 @@
 }
 
 :local(.requirements) {
-  margin-bottom: 50px;
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
