Create requirements styling

--- a/src/components/stateless/generic/InputField/InputField.scss
+++ b/src/components/stateless/generic/InputField/InputField.scss
@@ -1,6 +1,6 @@
-$underline-color: rgba(0,44,135,0.15);
+@import '../.././shared.scss';
+
 $placeholder-color: rgba(32,171,250,0.42);
-$value-color: rgba(0,44,135,0.4);
 $label-color: #002c87;
 
 :local(.row) {
