--- a/src/components/stateless/generic/TextField/TextField.scss
+++ b/src/components/stateless/generic/TextField/TextField.scss
@@ -1,24 +1,18 @@
-$label-text-color: #002C87;
-$field-height: 50px;
-$underline-color: rgba(0,44,135,0.15);
-$placeholder-color: rgba(32,171,250,0.42);
+@import '../../shared.scss';
 
 :local(.input) {
+  @include font();
+  box-sizing: border-box;
   color: #002C87;
+  font-size: 16px;
   padding: 6px 0 6px 14px;
-  border: 1px solid rgba(158,158,158,0.4);
-  font-family: 'Muli', sans-serif;
-  font-size: 28px;
+  border: 1px solid rgba(0,44,135,0.29);
+  border-radius: 2px;
   width: 100%;
-  height: 50px;
+  height: 40px;
 
   &:focus {
-    border: 1px solid rgba(158,158,158,0.4);
+    border: 1px solid rgba(248,198,0,1);
     outline: none;
-  }
-
-  &::placeholder {
-    content: 'Fish';
-    color: $placeholder-color;
   }
 }
