Create requirements styling

--- a/src/components/stateless/shared.scss
+++ b/src/components/stateless/shared.scss
@@ -2,6 +2,7 @@
   -webkit-font-smoothing: antialiased;
   font-family: 'Muli', sans-serif;
   color: #002c87;
+  font-weight: 100;
 }
 
 @mixin link() {
