--- a/src/components/RootComponent.scss
+++ b/src/components/RootComponent.scss
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Muli');
+@import './stateless/shared';
+
+:root {
+  @include font();
+}
 
 .logo {
   display:block;
