--- a/src/components/RootComponent.scss
+++ b/src/components/RootComponent.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Muli');
+@import url('https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i,600,600i,700,700i');
 @import './stateless/shared';
 
 :root {
