--- a/src/components/stateless/specific/transactions/TransactionsStatus/TransactionsStatus.scss
+++ b/src/components/stateless/specific/transactions/TransactionsStatus/TransactionsStatus.scss
@@ -25,7 +25,7 @@
 :local(.visible) {
   display: flex;
   flex-direction: column;
-  background-color: #f5fafd;
+  background-color: white;
   position: absolute;
   right: -1px;
   top: 70px;
