--- a/src/components/stateless/generic/TextField/TextField.scss
+++ b/src/components/stateless/generic/TextField/TextField.scss
@@ -16,3 +16,12 @@
     outline: none;
   }
 }
+
+:local(.error) {
+  border: 1px solid rgba(255,0,0,0.29) !important;
+}
+
+:local(.message) {
+  position: absolute;
+  color: #f00;
+}
