--- a/src/components/stateless/generic/SearchField/SearchField.scss
+++ b/src/components/stateless/generic/SearchField/SearchField.scss
@@ -1,8 +1,8 @@
 @import '../../shared';
 
-$underline-color: rgba(0,44,135,0.15);
-$placeholder-color: rgba(32,171,250,0.42);
-$field-name-color: rgba(0,44,135,0.4);
+$underline-color: rgba(0, 44, 135, 0.15);
+$placeholder-color: rgba(32, 171, 250, 0.42);
+$field-name-color: rgba(0, 44, 135, 0.4);
 
 :local(.label) {
   font-family: 'Muli', sans-serif;
