--- a/src/components/stateless/generic/ValidatedTextField/ValidatedTextField.scss
+++ b/src/components/stateless/generic/ValidatedTextField/ValidatedTextField.scss
@@ -1,6 +1,6 @@
-$underline-color: rgba(0,44,135,0.15);
-$placeholder-color: rgba(32,171,250,0.42);
-$field-name-color: rgba(0,44,135,0.4);
+$underline-color: rgba(0, 44, 135, 0.15);
+$placeholder-color: rgba(32, 171, 250, 0.42);
+$field-name-color: rgba(0, 44, 135, 0.4);
 
 .field-name {
   font-family: 'Muli', sans-serif;
