--- a/src/components/stateless/specific/transactions/TransactionsStatus/TransationNotification/TransactionNotification.scss
+++ b/src/components/stateless/specific/transactions/TransactionsStatus/TransationNotification/TransactionNotification.scss
@@ -60,7 +60,7 @@
 
 :local(.time) {
   font-size: 11px;
-  color: rgba(0,44,135,0.4);
+  color: rgba(0, 44, 135, 0.4);
 }
 
 :local(.type) {
@@ -70,7 +70,7 @@
 
 :local(.address) {
   font-size: 13px;
-  color: rgba(0,44,135,0.4);
+  color: rgba(0, 44, 135, 0.4);
   overflow: hidden;
   text-overflow: ellipsis;
 }
