--- a/src/components/stateless/generic/SelectorField/SelectorField.scss
+++ b/src/components/stateless/generic/SelectorField/SelectorField.scss
@@ -9,7 +9,7 @@
   line-height: 40px;
   border-radius: 0;
   border: 0;
-  border-bottom: 1px solid rgba(0,44,135,0.15);
+  border-bottom: 1px solid rgba(0, 44, 135, 0.15);
   -webkit-appearance: none;
   -webkit-border-radius: 0;
   background: transparent url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24' height='24' viewBox='0 0 24 24'><path fill='#444' d='M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>") no-repeat 100% 50%;
