--- a/src/components/stateless/generic/TextField/TextField.scss
+++ b/src/components/stateless/generic/TextField/TextField.scss
@@ -6,19 +6,19 @@
   color: #002C87;
   font-size: 16px;
   padding: 6px 0 6px 14px;
-  border: 1px solid rgba(0,44,135,0.29);
+  border: 1px solid rgba(0, 44, 135, 0.29);
   border-radius: 2px;
   width: 100%;
   height: 40px;
 
   &:focus {
-    border: 1px solid rgba(248,198,0,1);
+    border: 1px solid rgba(248, 198, 0, 1);
     outline: none;
   }
 }
 
 :local(.error) {
-  border: 1px solid rgba(255,0,0,0.29) !important;
+  border: 1px solid rgba(255, 0, 0, 0.29) !important;
 }
 
 :local(.message) {
