--- a/src/components/stateless/specific/modals/TransactionProgressModal/TransactionProgressModal.scss
+++ b/src/components/stateless/specific/modals/TransactionProgressModal/TransactionProgressModal.scss
@@ -65,7 +65,7 @@
   position: absolute;
   top: 47px;
   left: 11px;
-  transform: scale(0.5,0.5);
+  transform: scale(0.5, 0.5);
 }
 
 :local(.inner) {
