--- a/src/components/stateless/specific/pages/CreateRequirements/CreateRequirements.scss
+++ b/src/components/stateless/specific/pages/CreateRequirements/CreateRequirements.scss
@@ -43,9 +43,9 @@
 }
 
 :local(.selector) {
-  color: rgba(0,44,135,1);
+  color: rgba(0, 44, 135, 1);
   border-radius: 2px;
-  border: 1px solid rgba(0,44,135,0.29);
+  border: 1px solid rgba(0, 44, 135, 0.29);
   width: 127px;
   height: 40px;
 }
