--- a/src/components/stateless/specific/pages/ProductPage/BuyProduct/BuyProduct.scss
+++ b/src/components/stateless/specific/pages/ProductPage/BuyProduct/BuyProduct.scss
@@ -1,7 +1,7 @@
 :local(.title) {
   font-weight: 100;
   font-size: 28px;
-  border-bottom: 1px solid rgba(0,0,0,0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding-bottom: 20px;
   margin-bottom: 20px;
 }
