--- a/src/components/stateless/specific/pages/ProductPage/ProductPage.scss
+++ b/src/components/stateless/specific/pages/ProductPage/ProductPage.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   align-content: center;
-  border-left: 1px solid rgba(0,44,135,0.1);
+  border-left: 1px solid rgba(0, 44, 135, 0.1);
 }
 
 :local(.requirementsColumn) {
@@ -24,7 +24,7 @@
   @include column();
   flex: 1;
   border: 0;
-  background-color: rgba(32,171,250,0.2);
+  background-color: rgba(32, 171, 250, 0.2);
   height: 100vh;
 }
 
@@ -34,7 +34,7 @@
   font-size: 28px;
   font-weight: 100;
   padding-bottom: 12px;
-  border-bottom: 1px solid rgba(0,44,135,0.2);
+  border-bottom: 1px solid rgba(0, 44, 135, 0.2);
 }
 
 :local(.info) {
