--- a/src/components/stateless/specific/pages/ProductPage/SummaryApprovedProduct/SummaryApprovedProduct.scss
+++ b/src/components/stateless/specific/pages/ProductPage/SummaryApprovedProduct/SummaryApprovedProduct.scss
@@ -7,7 +7,7 @@
 :local(.title) {
   font-weight: 100;
   font-size: 28px;
-  border-bottom: 1px solid rgba(0,0,0,0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding-bottom: 20px;
   margin-bottom: 20px;
 }
@@ -16,7 +16,7 @@
   @include margin();
   background-color: #ffffff;
   color: #002C87;
-  border: 1px solid rgba(0,44,135,0.4);
+  border: 1px solid rgba(0, 44, 135, 0.4);
 }
 
 :local(.requirements) {
