--- a/src/components/stateless/specific/pages/ProductPage/SummaryProduct/SummaryProduct.scss
+++ b/src/components/stateless/specific/pages/ProductPage/SummaryProduct/SummaryProduct.scss
@@ -8,7 +8,7 @@
   @include font();
   font-weight: 100;
   font-size: 22px;
-  border-bottom: 1px solid rgba(0,44,135,0.2);
+  border-bottom: 1px solid rgba(0, 44, 135, 0.2);
   padding-bottom: 21px;
   margin-bottom: 12px;
 }
@@ -17,7 +17,7 @@
   @include margin();
   background-color: #ffffff;
   color: #002C87;
-  border: 1px solid rgba(0,44,135,0.4);
+  border: 1px solid rgba(0, 44, 135, 0.4);
 }
 
 :local(.requirements) {
