--- a/src/components/stateless/specific/pages/WelcomePage/WelcomePage.scss
+++ b/src/components/stateless/specific/pages/WelcomePage/WelcomePage.scss
@@ -1,12 +1,35 @@
 @import '../../../shared.scss';
 
 :local(.page) {
-  position: absolute;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
   background-color: #002c87;
   width:100%;
   height:100%;
   left: 0;
   top: 0;
+}
+
+:local(.group) {
+  display: flex;
+  flex-direction:column;
+}
+
+:local(.logo) {
+  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 20px;
+}
+
+:local(.smallLogo) {
+  display: block;
+  position: absolute;
+  left: 50%;
+  bottom: 10%;
+  transform: translateX(-50%);
 }
 
 :local(.group) {
@@ -26,13 +49,6 @@
 
 :local(.field) {
   flex: 8;
-}
-
-:local(.logo) {
-  position: relative;
-  margin: 0 auto;
-  top: 50%;
-  left: 50%;
 }
 
 :local(.text) {
