--- a/src/components/stateless/specific/pages/ProductPage/ProductItem/ProductItem.scss
+++ b/src/components/stateless/specific/pages/ProductPage/ProductItem/ProductItem.scss
@@ -1,23 +1,5 @@
 @import '../../../../generic/Button/Button';
 
-$container-shadow: rgba(0, 0, 0, 0.15);
-
-$product-name-color: #000;
-$product-seller-color: #000;
-$product-title-color: #002c87;
-$product-field-label: #9d9d9d;
-$product-field-value: #002C87;
-
-$buy-button-border: #002C87;
-$buy-button-text-color: #ffffff;
-$buy-button-background-color: #002C87;
-$buy-button-height: 40px;
-
-$more-details-border: #e0e0e0;
-$more-details-text-color: #002C87;
-$more-details-color: #002C87;
-$more-details-height: 40px;
-
 :local(.product) {
   position: relative;
   width: 263px;
@@ -25,7 +7,7 @@ $more-details-height: 40px;
   background: white;
   overflow: hidden;
   margin: 10px;
-  box-shadow: 0 0 10px -2px $container-shadow, 0 0 10px -2px $container-shadow;
+  box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.15), 0 0 10px -2px rgba(0, 0, 0, 0.15);
   float: left;
 }
 
@@ -38,7 +20,7 @@ $more-details-height: 40px;
   border-radius: 0 3px 3px 0;
   font-size: 12px;
   padding: 4.5px 11px;
-  color: $product-title-color;
+  color: #002c87;
   font-family: 'Muli', sans-serif;
   font-weight: 400;
 }
@@ -58,7 +40,7 @@ $more-details-height: 40px;
   overflow: hidden;
   white-space: nowrap;
   margin: 0 0 14px 0;
-  color: $product-title-color;
+  color: #002c87;
   font-family: 'Muli', sans-serif;
   font-size: 22px;
   font-weight: 400;
@@ -76,55 +58,32 @@ $more-details-height: 40px;
   @include link();
 }
 
-.product {
+:local(.productValue) {
+  color: #002C87;
+  font-size: 15px;
+  display: block;
+  text-align: right;
+  flex-basis: 50%;
+  margin-bottom: 13px;
+  font-family: 'Muli', sans-serif;
+  font-weight: 400;
+}
 
-  &__more-details-button {
-    @include button($more-details-text-color, #ffffff, $more-details-height);
-    @include button-border(#e0e0e0, 1px, solid);
-    &:hover {
-      cursor: pointer;
-    }
-  }
+:local(.productLabel) {
+  color: #9d9d9d;
+  font-size: 13px;
+  display: block;
+  text-align: left;
+  flex-basis: 50%;
+  margin-bottom: 13px;
+  font-family: 'Muli', sans-serif;
+  font-weight: 400;
+}
 
-  &__buy-button {
-    @include button($buy-button-text-color, $buy-button-background-color, $buy-button-height);
-    &:hover {
-      cursor: pointer;
-    }
-  }
-
-  &__button-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-
-  &__fields-container {
-
-  }
-
-  &__field {
-
-    &-value {
-      color: $product-field-value;
-      font-size: 15px;
-      display: block;
-      text-align: right;
-      flex-basis: 50%;
-      margin-bottom: 13px;
-      font-family: 'Muli', sans-serif;
-      font-weight: 400;
-    }
-
-    &-label {
-      color: $product-field-label;
-      font-size: 13px;
-      display: block;
-      text-align: left;
-      flex-basis: 50%;
-      margin-bottom: 13px;
-      font-family: 'Muli', sans-serif;
-      font-weight: 400;
-    }
+:local(.button) {
+  @include button(#002C87, #ffffff, 40px);
+  @include button-border(#e0e0e0, 1px, solid);
+  &:hover {
+    cursor: pointer;
   }
 }
