Correct background color

--- a/src/components/stateless/specific/pages/WelcomePage/WelcomePage.scss
+++ b/src/components/stateless/specific/pages/WelcomePage/WelcomePage.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  background-color: #002c87;
+  background-color: #002a85;
   width:100%;
   height:100%;
   left: 0;
