--- a/src/components/stateless/generic/ValidatedTextField/ValidatedTextField.scss
+++ b/src/components/stateless/generic/ValidatedTextField/ValidatedTextField.scss
@@ -1,30 +1,26 @@
-$underline-color: rgba(0, 44, 135, 0.15);
-$placeholder-color: rgba(32, 171, 250, 0.42);
-$field-name-color: rgba(0, 44, 135, 0.4);
+@import '../../shared.scss';
 
-.field-name {
-  font-family: 'Muli', sans-serif;
-  color: $field-name-color;
-  font-size: 13px;
-  padding-right: 10px;
+:local(.input) {
+  @include font();
+  box-sizing: border-box;
+  color: #002C87;
+  font-size: 16px;
+  padding: 6px 0 6px 14px;
+  border: 1px solid rgba(0, 44, 135, 0.29);
+  border-radius: 2px;
+  width: 100%;
+  height: 40px;
 
-  &::after {
-    content: ":"
+  &:focus {
+    border: 1px solid rgba(248, 198, 0, 1);
+    outline: none;
   }
 }
 
-.text-field {
-  font-family: 'Muli', sans-serif;
-  color: #20abfa;
-  font-size: 15px;
-  outline: none;
-  background-color: transparent;
-  border: 0 none;
-  border-bottom: 1px solid $underline-color;
-  padding: 3px 3px;
+:local(.error) {
+  border: 1px solid rgba(255, 0, 0, 0.29) !important;
+}
 
-  &::placeholder {
-    content: 'Fish';
-    color: $placeholder-color;
-  }
+:local(.message) {
+  color: #f00;
 }
