--- a/src/components/stateless/specific/containers/AttributeValueFieldContainer/AttributeValueField.scss
+++ b/src/components/stateless/specific/containers/AttributeValueFieldContainer/AttributeValueField.scss
@@ -6,6 +6,8 @@
 }
 
 :local(.field) {
+  overflow: hidden;
+  text-overflow: ellipsis;
   font-size: 13px;
   display: table-cell;
   padding-right: 20px;
@@ -16,6 +18,8 @@
 }
 
 :local(.value) {
+  overflow: hidden;
+  text-overflow: ellipsis;
   display: table-cell;
   font-size: 15px;
   text-align: right;
