--- a/src/components/stateless/generic/InputField/InputField.scss
+++ b/src/components/stateless/generic/InputField/InputField.scss
@@ -1,8 +1,5 @@
 @import '../.././shared.scss';
 
-$placeholder-color: rgba(32, 171, 250, 0.42);
-$label-color: #002c87;
-
 :local(.row) {
   display: table-row;
   height: 60px;
@@ -11,13 +8,22 @@ $label-color: #002c87;
 :local(.label) {
   display: table-cell;
   font-family: 'Muli', sans-serif;
-  color: $label-color;
+  color: #002c87;
   font-size: 15px;
   padding-right: 46px;
 
   &::after {
     content: ":"
   }
+}
+
+:local(.showErrors) {
+  display: block;
+  color: red;
+}
+
+:local(.hideErrors) {
+  display:none;
 }
 
 :local(.value) {
@@ -33,6 +39,6 @@ $label-color: #002c87;
 
   &::placeholder {
     content: 'Fish';
-    color: $placeholder-color;
+    color: rgba(32, 171, 250, 0.42);
   }
 }
