Fixing passing arguments

--- a/src/components/stateless/generic/TextField/TextField.scss
+++ b/src/components/stateless/generic/TextField/TextField.scss
@@ -18,6 +18,15 @@
   }
 }
 
+:local(.showErrors) {
+  display: block;
+  color: red;
+}
+
+:local(.hideErrors) {
+  display:none;
+}
+
 :local(.error) {
   border: 1px solid rgba(255, 0, 0, 0.29) !important;
 }
