--- a/src/components/stateless/generic/InputField/InputField.scss
+++ b/src/components/stateless/generic/InputField/InputField.scss
@@ -1,16 +1,17 @@
 @import '../.././shared.scss';
 
 :local(.row) {
-  display: table-row;
-  height: 60px;
+  display: flex;
+  height: 40px;
 }
 
 :local(.label) {
-  display: table-cell;
   font-family: 'Muli', sans-serif;
   color: #002c87;
   font-size: 15px;
-  padding-right: 46px;
+  line-height: 40px;
+  height: 40px;
+  padding-right: 20px;
 
   &::after {
     content: ":"
@@ -36,13 +37,14 @@
 }
 
 :local(.value) {
-  display: table-cell;
   font-family: 'Muli', sans-serif;
   color: #002C87;
   border: 1px solid #002c87;
   border-radius: 2px;
+  box-sizing: border-box;
   font-size: 16px;
   height: 40px;
+  line-height: 40px;
   outline: none;
   padding-left: 10px;
 
