--- a/src/components/stateless/specific/pages/CreateRequirements/CreateRequirements.scss
+++ b/src/components/stateless/specific/pages/CreateRequirements/CreateRequirements.scss
@@ -17,6 +17,10 @@
   width: 300px;
 }
 
+:local(.form) {
+  margin-top: 20px;
+}
+
 :local(.list) {
   display: flex;
   flex-direction: column;
@@ -33,11 +37,12 @@
 
 :local(.label) {
   @include font();
-  font-size: 13px;
+  font-size: 16px;
   margin-bottom: 10px !important;
 }
 
 :local(.section) {
+  @include font();
   font-size: 16px;
   font-weight: 100;
 }
