Menu: Show on which item are you on

--- a/src/components/stateless/specific/navigation/ContextMenu/ContextMenu.scss
+++ b/src/components/stateless/specific/navigation/ContextMenu/ContextMenu.scss
@@ -8,6 +8,10 @@
   text-decoration: none;
 }
 
+:local(.active) {
+  color: #20abfa;
+}
+
 :local(.element) {
   font-family: 'Muli', sans-serif;
   font-weight: bold;
