--- a/src/components/stateless/specific/transactions/TransactionsStatus/TransactionsStatus.scss
+++ b/src/components/stateless/specific/transactions/TransactionsStatus/TransactionsStatus.scss
@@ -54,8 +54,7 @@
   flex-direction: column;
   position: absolute;
   justify-content: center;
-  left: -142.6px;
-  width: 140px;
+  right: 65.6px;
   height: 60px;
 }
 
@@ -87,6 +86,14 @@
   display: flex;
   flex-direction: row;
   align-content: center;
+}
+
+:local(.iconContainer) > div {
+  margin-right: 10px;
+}
+
+:local(.iconContainer) > div:first-child {
+  margin-left: 10px;
 }
 
 :local(.tooltipVisible) {
