Show spinner on loading, fixed some bugs with market local storage

--- a/src/components/stateless/specific/pages/MarketPage/MarketPage.scss
+++ b/src/components/stateless/specific/pages/MarketPage/MarketPage.scss
@@ -12,6 +12,15 @@ $create-offer-button-text-color: #ffffff;
   width: 170px;
 }
 
+:local(.spinnerWrapper) {
+  margin-top: 50px;
+  text-align: center;
+
+  & > img {
+    display: inline-block;
+  }
+}
+
 .navigation {
 
   &__link {
