--- a/src/components/RootComponent.scss
+++ b/src/components/RootComponent.scss
@@ -4,3 +4,17 @@
 :root {
   @include font();
 }
+
+html, body {
+  width: 100%;
+  height: 100%;
+  width: -webkit-calc(100% - 0);
+  height: -webkit-calc(100% - 0);
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+body * {
+    box-sizing : border-box;
+}
