--- a/src/components/stateless/specific/containers/AttributeValueFieldContainer/AttributeValueField.scss
+++ b/src/components/stateless/specific/containers/AttributeValueFieldContainer/AttributeValueField.scss
@@ -1,15 +1,16 @@
 :local(.row) {
+  display: inline-flex;
+  width: 100%;
+  height: 31px;
   font-family: 'Muli', sans-serif;
   font-size: 15px;
-  display: table-row;
-  height: 31px;
 }
 
 :local(.field) {
+  min-width: 60px;
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: 13px;
-  display: table-cell;
   padding-right: 20px;
   color: rgba(0, 44, 135, 0.4);
   &:after {
@@ -18,6 +19,7 @@
 }
 
 :local(.value) {
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   display: table-cell;
