--- a/src/components/stateless/specific/pages/ProductPage/ProductItem/ProductItem.scss
+++ b/src/components/stateless/specific/pages/ProductPage/ProductItem/ProductItem.scss
@@ -8,7 +8,12 @@
   overflow: hidden;
   margin: 10px;
   box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.15), 0 0 10px -2px rgba(0, 0, 0, 0.15);
-  float: left;
+  display: inline-block;
+  transition: box-shadow 0.4s ease;
+
+  &:hover {
+    box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05), 0 0 20px 5px rgba(0, 0, 0, 0.1);
+  }
 }
 
 :local(.category) {
@@ -90,7 +95,11 @@
 :local(.button) {
   @include button(#002C87, #ffffff, 40px);
   @include button-border(#e0e0e0, 1px, solid);
+  transition: background 0.5s ease, color 0.5s ease;
+
   &:hover {
     cursor: pointer;
+    background: #002C87;
+    color: #ffffff;
   }
 }
