Changed OrdersPage and InputField styles. Fixed lint.

--- a/src/components/stateless/specific/pages/ProductPage/ProductItem/ProductItem.scss
+++ b/src/components/stateless/specific/pages/ProductPage/ProductItem/ProductItem.scss
@@ -8,7 +8,7 @@
   overflow: hidden;
   margin: 10px;
   box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.15), 0 0 10px -2px rgba(0, 0, 0, 0.15);
-  float: left;
+  display: inline-block;
 }
 
 :local(.category) {
