--- a/src/components/stateless/specific/pages/ProductPage/BuyProduct/BuyProduct.scss
+++ b/src/components/stateless/specific/pages/ProductPage/BuyProduct/BuyProduct.scss
@@ -8,6 +8,10 @@
 
 :local(.requirements) {
   margin-bottom: 50px;
+  > div {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 :local(.button) {
