--- a/src/components/stateless/specific/pages/ProductPage/ProductPage.scss
+++ b/src/components/stateless/specific/pages/ProductPage/ProductPage.scss
@@ -12,12 +12,12 @@
 
 :local(.requirementsColumn) {
   @include column();
-  flex: 1;
+  width: 25%;
 }
 
 :local(.typeColumn) {
   @include column();
-  flex: 2;
+  width: 50%;
 }
 
 :local(.link) {
@@ -31,7 +31,7 @@
 
 :local(.summaryColumn) {
   @include column();
-  flex: 1;
+  width: 25%;
   border: 0;
   background-color: rgba(32, 171, 250, 0.2);
   height: 100vh;
@@ -52,7 +52,7 @@
 
 :local(.subtitle) {
   text-transform: uppercase;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 
 :local(.container) {
