--- a/src/components/stateless/specific/pages/OrdersPage/OrdersPage.scss
+++ b/src/components/stateless/specific/pages/OrdersPage/OrdersPage.scss
@@ -1,4 +1,9 @@
 
 :local(.ordersList) {
   min-height: 55vh;
+  > div {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
 }
