--- a/src/components/stateless/specific/containers/ProductContainer/ProductContainer.scss
+++ b/src/components/stateless/specific/containers/ProductContainer/ProductContainer.scss
@@ -1,3 +1,9 @@
+:local(.container) {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
 :local(.spinner) {
   display: block;
   margin: 0 auto;
