--- a/src/components/stateless/specific/pages/ProductPage/ProductPage.scss
+++ b/src/components/stateless/specific/pages/ProductPage/ProductPage.scss
@@ -17,11 +17,14 @@
 
 :local(.typeColumn) {
   @include column();
+  overflow: hidden;
+  margin-right: 30px;
   width: 50%;
 }
 
 :local(.link) {
   margin-top: 20px;
+  display: block;
   @include link();
 }
 
@@ -67,6 +70,12 @@
   padding-bottom: 40px;
 }
 
-:local(.statements) p {
-  margin: 3px 0 15px 0;
+:local(.statements) {
+  margin: 40px 0;
+  a {
+    margin-top: 25px;
+  }
+  p {
+    margin: 3px 0 15px 0;
+  }
 }
