Add create account tip modal. Fix lint.

--- a/src/components/stateless/specific/pages/WelcomePage/FormStyles.scss
+++ b/src/components/stateless/specific/pages/WelcomePage/FormStyles.scss
@@ -94,3 +94,12 @@
     }
   }
 }
+
+:local(.tipRow) {
+  word-break: break-all;
+  font-size: 18px;
+  line-height: 25px;
+  > a {
+    text-decoration: underline;
+  }
+}
